c-rewrite/tree-sitter-pseudo/test/corpus/expressions.txt
================================================================================
Integer number
================================================================================

x <- 42

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (atom
          (number))))))

================================================================================
Decimal number
================================================================================

x <- 3.14

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (atom
          (number))))))

================================================================================
Double quoted string
================================================================================

scrie "hello world"

--------------------------------------------------------------------------------

(program
  (stmt
    (write
      values: (expr_list
        (expr
          (atom
            (string)))))))

================================================================================
Single quoted string
================================================================================

scrie 'hello'

--------------------------------------------------------------------------------

(program
  (stmt
    (write
      values: (expr_list
        (expr
          (atom
            (string)))))))

================================================================================
Addition
================================================================================

x <- a + b

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (add_expr
          left: (expr
            (atom
              (identifier)))
          right: (expr
            (atom
              (identifier))))))))

================================================================================
Subtraction
================================================================================

x <- a - b

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (add_expr
          left: (expr
            (atom
              (identifier)))
          right: (expr
            (atom
              (identifier))))))))

================================================================================
Multiplication
================================================================================

x <- a * b

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (mul_expr
          left: (expr
            (atom
              (identifier)))
          right: (expr
            (atom
              (identifier))))))))

================================================================================
Division
================================================================================

x <- a / b

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (mul_expr
          left: (expr
            (atom
              (identifier)))
          right: (expr
            (atom
              (identifier))))))))

================================================================================
Modulo
================================================================================

x <- a % b

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (mul_expr
          left: (expr
            (atom
              (identifier)))
          right: (expr
            (atom
              (identifier))))))))

================================================================================
Operator precedence: mul before add
================================================================================

x <- a + b * c

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (add_expr
          left: (expr
            (atom
              (identifier)))
          right: (expr
            (mul_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (identifier))))))))))

================================================================================
Parenthesized expression
================================================================================

x <- (a + b) * c

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (mul_expr
          left: (expr
            (paren
              (expr
                (add_expr
                  left: (expr
                    (atom
                      (identifier)))
                  right: (expr
                    (atom
                      (identifier)))))))
          right: (expr
            (atom
              (identifier))))))))

================================================================================
Comparison equals
================================================================================

daca x = 5 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (compare_expr
          left: (expr
            (atom
              (identifier)))
          right: (expr
            (atom
              (number))))))))

================================================================================
Comparison not equals
================================================================================

daca x != 0 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (compare_expr
          left: (expr
            (atom
              (identifier)))
          right: (expr
            (atom
              (number))))))))

================================================================================
Comparison less than
================================================================================

daca x < 10 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (compare_expr
          left: (expr
            (atom
              (identifier)))
          right: (expr
            (atom
              (number))))))))

================================================================================
Comparison less or equal
================================================================================

daca x <= 10 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (compare_expr
          left: (expr
            (atom
              (identifier)))
          right: (expr
            (atom
              (number))))))))

================================================================================
Comparison greater than
================================================================================

daca x > 0 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (compare_expr
          left: (expr
            (atom
              (identifier)))
          right: (expr
            (atom
              (number))))))))

================================================================================
Comparison greater or equal
================================================================================

daca x >= 1 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (compare_expr
          left: (expr
            (atom
              (identifier)))
          right: (expr
            (atom
              (number))))))))

================================================================================
Logical AND (lowercase)
================================================================================

daca x > 0 si y > 0 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (and_expr
          left: (expr
            (compare_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (number)))))
          right: (expr
            (compare_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (number))))))))))

================================================================================
Logical AND (uppercase)
================================================================================

daca x > 0 SI y > 0 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (and_expr
          left: (expr
            (compare_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (number)))))
          right: (expr
            (compare_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (number))))))))))

================================================================================
Logical OR (lowercase)
================================================================================

daca x = 0 sau y = 0 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (or_expr
          left: (expr
            (compare_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (number)))))
          right: (expr
            (compare_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (number))))))))))

================================================================================
Logical OR (uppercase)
================================================================================

daca x = 0 SAU y = 0 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (or_expr
          left: (expr
            (compare_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (number)))))
          right: (expr
            (compare_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (number))))))))))

================================================================================
Logical NOT (lowercase)
================================================================================

daca not x = 0 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (not_expr
          operand: (expr
            (compare_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (number))))))))))

================================================================================
Logical NOT (uppercase)
================================================================================

daca NOT x = 0 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (not_expr
          operand: (expr
            (compare_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (number))))))))))

================================================================================
Negation
================================================================================

x <- -5

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (neg_expr
          operand: (atom
            (number)))))))

================================================================================
Floor function
================================================================================

x <- [a / b]

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (floor
          operand: (expr
            (mul_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (identifier))))))))))

================================================================================
Precedence: AND before OR
================================================================================

daca a = 1 sau b = 2 si c = 3 atunci sf

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (expr
        (or_expr
          left: (expr
            (compare_expr
              left: (expr
                (atom
                  (identifier)))
              right: (expr
                (atom
                  (number)))))
          right: (expr
            (and_expr
              left: (expr
                (compare_expr
                  left: (expr
                    (atom
                      (identifier)))
                  right: (expr
                    (atom
                      (number)))))
              right: (expr
                (compare_expr
                  left: (expr
                    (atom
                      (identifier)))
                  right: (expr
                    (atom
                      (number))))))))))))
