tree-sitter-pseudo/test/corpus/statements.txt
================================================================================
Simple assignment
================================================================================

x <- 5

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (atom
          (number))))))

================================================================================
Assignment with expression
================================================================================

x <- 2 + 3

--------------------------------------------------------------------------------

(program
  (stmt
    (assign
      name: (identifier)
      value: (expr
        (add_expr
          left: (expr
            (atom
              (number)))
          right: (expr
            (atom
              (number))))))))

================================================================================
Swap statement
================================================================================

x <-> y

--------------------------------------------------------------------------------

(program
  (stmt
    (swap
      left: (identifier)
      right: (identifier))))

================================================================================
Swap statement with long arrow
================================================================================

a <--> b

--------------------------------------------------------------------------------

(program
  (stmt
    (swap
      left: (identifier)
      right: (identifier))))

================================================================================
Read single variable
================================================================================

citeste x

--------------------------------------------------------------------------------

(program
  (stmt
    (read
      names: (name_list
        (identifier)))))

================================================================================
Read multiple variables
================================================================================

citeste x, y, z

--------------------------------------------------------------------------------

(program
  (stmt
    (read
      names: (name_list
        (identifier)
        (identifier)
        (identifier)))))

================================================================================
Write single value
================================================================================

scrie x

--------------------------------------------------------------------------------

(program
  (stmt
    (write
      values: (expr_list
        (expr
          (atom
            (identifier)))))))

================================================================================
Write multiple values
================================================================================

scrie x, y + 1

--------------------------------------------------------------------------------

(program
  (stmt
    (write
      values: (expr_list
        (expr
          (atom
            (identifier)))
        (expr
          (add_expr
            left: (expr
              (atom
                (identifier)))
            right: (expr
              (atom
                (number)))))))))

================================================================================
Multi-statement
================================================================================

x <- 1; y <- 2; z <- 3

--------------------------------------------------------------------------------

(program
  (stmt
    (multi_stmt
      (assign
        name: (identifier)
        value: (expr
          (atom
            (number))))
      (assign
        name: (identifier)
        value: (expr
          (atom
            (number))))
      (assign
        name: (identifier)
        value: (expr
          (atom
            (number)))))))

================================================================================
Multi-statement with swap
================================================================================

x <- 1; a <-> b

--------------------------------------------------------------------------------

(program
  (stmt
    (multi_stmt
      (assign
        name: (identifier)
        value: (expr
          (atom
            (number))))
      (swap
        left: (identifier)
        right: (identifier)))))
